--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -52,7 +52,7 @@
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:shadowColor="@color/lightgray"
+                    android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -69,7 +69,7 @@
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="6"
-                    android:shadowColor="@color/lightgray"
+                    android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textAlignment="gravity"
                     android:textColor="@color/grayDarkTextColor"
