--- a/app/src/main/res/layout/toolbar_web_view_layout.xml
+++ b/app/src/main/res/layout/toolbar_web_view_layout.xml
@@ -20,11 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:shadowColor="@color/lightGray"
-            android:shadowRadius="4"
-            android:text="@string/AddNewAd"
+            android:text="@string/TermsOfUse"
             android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
 
     </RelativeLayout>
 
