--- a/app/src/main/res/drawable/ic_cat_tag.xml
+++ b/app/src/main/res/drawable/ic_cat_tag.xml
@@ -4,7 +4,7 @@
 
     <item android:color="@color/colorPrimary" android:state_checked="false">
         <shape>
-            <stroke android:width="1dp" android:color="@color/lightgray" />
+            <stroke android:width="1dp" android:color="@color/lightGray" />
             <solid android:color="@color/white" />
             <corners android:radius="25dp" />
         </shape>
