--- a/app/src/main/res/layout/post_add_layout.xml
+++ b/app/src/main/res/layout/post_add_layout.xml
@@ -70,21 +70,21 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/AdTitleMaxchars"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <android.support.v7.widget.AppCompatEditText
                             android:id="@+id/adTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/HouseForSale"
-                            app:backgroundTint="@color/lightgray" />
+                            app:backgroundTint="@color/lightGray" />
 
                         <TextView
                             style="@style/AppTheme.TextAppearance"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/Description"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <android.support.v7.widget.AppCompatEditText
                             android:id="@+id/adDescription"
@@ -92,7 +92,7 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/AboutYourAd"
                             android:lines="3"
-                            app:backgroundTint="@color/lightgray" />
+                            app:backgroundTint="@color/lightGray" />
 
                         <TextView
                             style="@style/AppTheme.TextAppearance"
@@ -100,7 +100,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/sm_margin"
                             android:text="@string/Images"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <HorizontalScrollView
                             android:layout_width="match_parent"
@@ -135,7 +135,7 @@
                         <android.support.v4.widget.Space
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/sperator"
-                            android:background="@color/lightgray" />
+                            android:background="@color/lightGray" />
 
                         <TextView
                             style="@style/AppTheme.TextAppearance"
@@ -143,7 +143,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/sm_margin"
                             android:text="@string/Category"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
 
                         <com.brainsocket.mainlibrary.Views.Stateslayoutview
@@ -170,7 +170,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/sm_margin"
                             android:text="@string/SubCategory"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/adSubCategories"
@@ -184,7 +184,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/sm_margin"
                             android:text="@string/City"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <com.brainsocket.mainlibrary.Views.Stateslayoutview
                             android:id="@+id/cityStateLayout"
@@ -208,7 +208,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/md_margin"
                             android:text="@string/Area"
-                            android:textColor="@color/lightgray" />
+                            android:textColor="@color/lightGray" />
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/adLocations"
