--- a/app/src/main/res/layout/post_item_fixed_layout.xml
+++ b/app/src/main/res/layout/post_item_fixed_layout.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/sperator"
                     android:layout_centerVertical="true"
-                    android:background="@color/lightgray" />
+                    android:background="@color/lightGray" />
 
                 <TextView
                     android:id="@+id/post_Tag"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:shadowColor="@color/lightgray"
+                android:shadowColor="@color/lightGray"
                 android:shadowRadius="@integer/textShadow"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="6"
-                    android:shadowColor="@color/lightgray"
+                    android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textAlignment="gravity"
                     android:textColor="@color/grayDarkTextColor"
