--- a/app/src/main/res/layout/post_item_text_fixed_layout.xml
+++ b/app/src/main/res/layout/post_item_text_fixed_layout.xml
@@ -36,7 +36,7 @@
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:shadowColor="@color/lightgray"
+                android:shadowColor="@color/lightGray"
                 android:shadowRadius="@integer/textShadow"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/sperator"
                     android:layout_centerVertical="true"
-                    android:background="@color/lightgray" />
+                    android:background="@color/lightGray" />
 
                 <TextView
                     android:id="@+id/post_Tag"
@@ -97,7 +97,7 @@
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="6"
-                    android:shadowColor="@color/lightgray"
+                    android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textAlignment="gravity"
                     android:textColor="@color/grayDarkTextColor"
