--- a/app/src/main/res/layout/profile_edit_layout.xml
+++ b/app/src/main/res/layout/profile_edit_layout.xml
@@ -66,7 +66,7 @@
                         android:layout_gravity="start"
                         android:text="@string/UserName"
                         android:textAlignment="gravity"
-                        android:textColor="@color/lightgray" />
+                        android:textColor="@color/lightGray" />
 
                     <android.support.v7.widget.AppCompatEditText
                         android:id="@+id/userNameEditText"
