--- a/app/src/main/res/layout/toolbar_pickup_location_layout.xml
+++ b/app/src/main/res/layout/toolbar_pickup_location_layout.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/toolbarTitle"
             style="@style/AppTheme.TitleTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
