--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -23,10 +23,10 @@
 
             <ImageView
                 android:id="@+id/productImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/product_image_width"
+                android:layout_height="@dimen/product_image_height"
                 android:adjustViewBounds="true"
-                android:background="@color/colorPrimary"
+                android:background="@color/transparent"
                 android:contentDescription="@string/contentDescription"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintLeft_toLeftOf="parent"
