--- a/app/src/main/res/layout/profile_edit_layout.xml
+++ b/app/src/main/res/layout/profile_edit_layout.xml
@@ -24,11 +24,13 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar_profile_layout" />
 
+
+        <!--android:layout_above="@+id/updateProfileBtnMainContainer"-->
+
         <android.support.v7.widget.CardView
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/updateProfileBtnMainContainer"
             android:layout_below="@+id/toolbar"
             app:cardBackgroundColor="@color/grayDarkTextColor"
             app:cardCornerRadius="@dimen/cardview_default_radius"
@@ -164,6 +166,7 @@
                     android:text="@string/SubscribetoCategory"
                     android:textColor="@color/white"
                     android:textStyle="bold"
+                    android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@+id/birthDateContainer" />
 
                 <View
@@ -171,6 +174,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/sperator"
                     android:background="@color/white"
+                    android:visibility="gone"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/categoryTitle"
@@ -181,6 +185,7 @@
                     android:id="@+id/myCategoriesStateLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     app:NoConnectionLayout="@layout/state_layout_noconnection"
                     app:NoDataLayout="@layout/state_layout_nodata"
                     app:RefreshbtnRes="@+id/retryBtn"
